--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:latest AS build
 RUN apt-get update
 RUN apt-get install openjdk-17-jdk -y
 
-COPY ./server .
+COPY . .
 
 RUN apt-get install maven -y
 RUN mvn clean install
