--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -16,12 +16,16 @@ jobs:
           java-version: 17
       - name: Build project
         run: mvn clean install
+        working-directory: server
       - name: Login Docker
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+        working-directory: server
       - name: Build docker image
         run: docker build -t arawns/neki_card .
+        working-directory: server
       - name: Publish image
         run: docker push arawns/neki_card
+        working-directory: server
   deploy:
     needs: build
     runs-on: ubuntu-latest
