--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,12 +5,12 @@ RUN apt-get install openjdk-17-jdk -y
 
 COPY . .
 
+ENV APP_PROFILE=prod
+
 RUN apt-get install maven -y
 RUN mvn clean install
 
 FROM openjdk:17-jdk-slim
-
-ENV SPRING_PROFILES_ACTIVE=prod
 
 EXPOSE 8080
 
