--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=${APP_PROFILE:dev}
+spring.profiles.active=${APP_PROFILE}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=never
