--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -9,23 +9,34 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Setup Java
-        uses: actions/setup-java@v3
+    
+      - name: Login to private registry
+        uses: docker/login-action@v2
         with:
-          distribution: temurin
-          java-version: 17
-      - name: Build project
-        run: mvn clean install
-        working-directory: server
-      - name: Login Docker
-        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
-        working-directory: server
-      - name: Build docker image
-        run: docker build -t arawns/neki_card .
-        working-directory: server
-      - name: Publish image
-        run: docker push arawns/neki_card
-        working-directory: server
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+        
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        
+      - name: Build the app image
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          context: ./server
+          file: ./server/Dockerfile
+          platforms: linux/amd64
+          tags: arawns/neki_card:latest
+          build-args: |
+                 APP_PROFILE=prod
+                 DATABASE_HOST=${{ secrets.DATABASE_HOST }}
+                 DATABASE_PORT=${{ secrets.DATABASE_PORT }}
+                 DATABASE_NAME=${{ secrets.DATABASE_NAME }}
+                 DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}
+                 DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}
   deploy:
     needs: build
     runs-on: ubuntu-latest
