--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.profiles.active=${APP_PROFILE}
+spring.profiles.active=${APP_PROFILE:dev}
 server.error.include-stacktrace=never
 frontEnd.baseURL=http://localhost:8080
