--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.profiles.active=${APP_PROFILE:dev}
 server.error.include-stacktrace=never
-frontEnd.baseURL=http://localhost:8080
+frontEnd.baseURL=${FRONTEND_URL: http://localhost:8080}
+security.token.secret=${JWT_SECRET: NEKI_CARD_SECRET}
