--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,8 @@ COPY . .
 
 
 ARG APP_PROFILE
+ARG JWT_SECRET
+ARG FRONTEND_URL
 ARG DATABASE_HOST
 ARG DATABASE_PORT
 ARG DATABASE_NAME
@@ -11,6 +13,8 @@ ARG DATABASE_USERNAME
 ARG DATABASE_PASSWORD
 
 ENV APP_PROFILE=$APP_PROFILE
+ENV JWT_SECRET=$JWT_SECRET
+ENV FRONTEND_URL=$FRONTEND_URL
 ENV DATABASE_HOST=$DATABASE_HOST
 ENV DATABASE_PORT=$DATABASE_PORT
 ENV DATABASE_NAME=$DATABASE_NAME
