--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -10,16 +10,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@types/react": "~18.2.45",
+    "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/webpack-config": "^19.0.0",
     "expo": "~50.0.2",
+    "expo-image": "~1.10.4",
     "expo-status-bar": "~1.11.1",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-nfc-manager": "^3.14.12",
-    "typescript": "^5.3.0"
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-svg": "12.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
