--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -11,20 +11,34 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@expo/webpack-config": "^19.0.0",
-    "expo": "~50.0.2",
-    "expo-image": "~1.10.4",
-    "expo-status-bar": "~1.11.1",
+    "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@tanstack/react-query": "^5.12.2",
+    "axios": "^1.6.2",
+    "expo": "~49.0.15",
+    "expo-file-system": "~15.4.5",
+    "expo-font": "~11.4.0",
+    "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2",
+    "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-hook-form": "^7.48.2",
+    "react-native": "0.72.6",
     "react-native-nfc-manager": "^3.14.12",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-svg": "12.1.1"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "yup": "^1.3.2",
+    "react-native-web": "~0.19.6",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.14",
     "babel-plugin-module-resolver": "^5.0.0",
     "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
