--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/webpack-config": "^19.0.0",
     "@hookform/resolvers": "^3.3.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -32,9 +33,9 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "yup": "^1.3.2",
     "react-native-web": "~0.19.6",
-    "@expo/webpack-config": "^19.0.0"
+    "yup": "^1.3.2",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
