--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -35,7 +35,8 @@
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "yup": "^1.3.2",
-    "expo-linear-gradient": "~12.3.0"
+    "expo-linear-gradient": "~12.3.0",
+    "@expo/vector-icons": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
