--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -36,7 +36,8 @@
     "react-native-web": "~0.19.6",
     "yup": "^1.3.2",
     "expo-linear-gradient": "~12.3.0",
-    "@expo/vector-icons": "^13.0.0"
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
