--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-nfc-manager": "^3.14.12",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
