--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.12.2",
+    "@types/react-native-snap-carousel": "^3.8.10",
     "axios": "^1.6.2",
     "date-fns": "^3.3.0",
     "expo": "~49.0.15",
@@ -37,6 +38,7 @@
     "react-native-nfc-manager": "^3.14.12",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "yup": "^1.3.2"
