--- a/mobile/nekicard/app.json
+++ b/mobile/nekicard/app.json
@@ -4,6 +4,11 @@
     "slug": "nekicard",
     "version": "1.0.0",
     "userInterfaceStyle": "dark",
-    "assetBundlePatterns": ["**/*"]
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "android": {
+      "package": "com.arawns.nekicard"
+    }
   }
 }
