--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -41,7 +41,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
