feat(Mobile): Update and image change implemented

--- a/mobile/nekicard/app.json
+++ b/mobile/nekicard/app.json
@@ -4,9 +4,7 @@
     "slug": "nekicard",
     "version": "1.0.0",
     "userInterfaceStyle": "dark",
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "android": {
       "package": "com.arawns.nekicard"
     }
