--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -28,7 +28,9 @@
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
     "expo-image-picker": "~14.3.2",
+    "expo-jwt": "^1.6.5",
     "expo-linear-gradient": "~12.3.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
@@ -41,8 +43,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "yup": "^1.3.2",
-    "expo-splash-screen": "~0.20.5"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
