--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -43,7 +43,9 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "expo-linking": "~5.0.2",
+    "expo-clipboard": "~4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
