--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -45,7 +45,8 @@
     "react-native-web": "~0.19.6",
     "yup": "^1.3.2",
     "expo-linking": "~5.0.2",
-    "expo-clipboard": "~4.3.1"
+    "expo-clipboard": "~4.3.1",
+    "lottie-react-native": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
