--- a/mobile/nekicard/.env
+++ b/mobile/nekicard/.env
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_API_URL=http://192.168.0.106:8082
+EXPO_PUBLIC_API_URL=https://neki-card.onrender.com/
+EXPO_PUBLIC_FRONTEND_URL=https://neki-card.vercel.app
