--- a/mobile/nekicard/package.json
+++ b/mobile/nekicard/package.json
@@ -24,14 +24,17 @@
     "axios": "^1.6.2",
     "date-fns": "^3.3.0",
     "expo": "~49.0.15",
+    "expo-clipboard": "~4.3.1",
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
     "expo-image-picker": "~14.3.2",
     "expo-jwt": "^1.6.5",
     "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "lottie-react-native": "5.1.6",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
@@ -43,16 +46,13 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "yup": "^1.3.2",
-    "expo-linking": "~5.0.2",
-    "expo-clipboard": "~4.3.1",
-    "lottie-react-native": "5.1.6"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "babel-plugin-module-resolver": "^5.0.0",
-    "react-native-svg-transformer": "^1.1.0",
+    "react-native-svg-transformer": "^1.3.0",
     "typescript": "^5.1.3"
   },
   "private": true
