--- a/web/nekicard/package.json
+++ b/web/nekicard/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "@radix-ui/react-avatar": "^1.0.4",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
