--- a/web/nekicard/package.json
+++ b/web/nekicard/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
