--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.it-neki</groupId>
 	<artifactId>nekicard</artifactId>
-	<version>1.0.0</version>
+	<version>2.0.0</version>
 	<name>nekicard</name>
 	<description>Desafio NekiCard</description>
 	<properties>
@@ -75,6 +75,21 @@
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
 		</dependency>
 	</dependencies>
 
